task3/pub_sub.tf
# # Public subnets
# ########################################################################################################################
# resource "aws_subnet" "public1" {
#     vpc_id     = "${aws_vpc.main.id}"
#     cidr_block = "${var.public1_cidr}"
# }
# resource "aws_subnet" "ppublic2" {
#     vpc_id     = "${aws_vpc.main.id}"
#     cidr_block = "${var.public2_cidr}"
# }
# resource "aws_subnet" "public3" {
#     vpc_id     = "${aws_vpc.main.id}"
#     cidr_block = "${var.public3_cidr}"
# }
